--- a/package.json
+++ b/package.json
@@ -15,5 +15,9 @@
   "bugs": {
     "url": "https://github.com/misael1310/PorfolioAPI/issues"
   },
-  "homepage": "https://github.com/misael1310/PorfolioAPI#readme"
+  "homepage": "https://github.com/misael1310/PorfolioAPI#readme",
+  "devDependencies": {
+    "@types/node": "^22.7.4",
+    "typescript": "^5.6.2"
+  }
 }
