--- a/package.json
+++ b/package.json
@@ -17,7 +17,11 @@
   },
   "homepage": "https://github.com/misael1310/PorfolioAPI#readme",
   "devDependencies": {
+    "@eslint/js": "^9.12.0",
     "@types/node": "^22.7.4",
-    "typescript": "^5.6.2"
+    "eslint": "^9.12.0",
+    "globals": "^15.10.0",
+    "typescript": "^5.6.2",
+    "typescript-eslint": "^8.8.0"
   }
 }
