--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "",
   "main": "server.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "lint": "eslint"
   },
   "repository": {
     "type": "git",
@@ -20,6 +21,7 @@
     "@eslint/js": "^9.12.0",
     "@types/node": "^22.7.4",
     "eslint": "^9.12.0",
+    "eslint-config-prettier": "^9.1.0",
     "globals": "^15.10.0",
     "typescript": "^5.6.2",
     "typescript-eslint": "^8.8.0"
