--- a/package.json
+++ b/package.json
@@ -32,6 +32,8 @@
   },
   "homepage": "https://github.com/misael1310/PorfolioAPI#readme",
   "devDependencies": {
+    "@commitlint/cli": "^19.5.0",
+    "@commitlint/config-conventional": "^19.5.0",
     "@eslint/js": "^9.12.0",
     "@types/node": "^22.7.5",
     "eslint": "^9.12.0",
