--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "@commitlint/cli": "^19.5.0",
     "@commitlint/config-conventional": "^19.5.0",
     "@eslint/js": "^9.12.0",
+    "@types/express": "^5.0.0",
     "@types/node": "^22.7.5",
     "commitizen": "^4.3.1",
     "cz-conventional-changelog": "^3.3.0",
@@ -53,5 +54,8 @@
     "commitizen": {
       "path": "./node_modules/cz-conventional-changelog"
     }
+  },
+  "dependencies": {
+    "express": "^4.21.1"
   }
 }
