--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "@commitlint/cli": "^19.5.0",
     "@commitlint/config-conventional": "^19.5.0",
     "@eslint/js": "^9.12.0",
+    "@types/cors": "^2.8.17",
     "@types/express": "^5.0.0",
     "@types/node": "^22.7.5",
     "commitizen": "^4.3.1",
@@ -56,6 +57,7 @@
     }
   },
   "dependencies": {
+    "cors": "^2.8.5",
     "express": "^4.21.1"
   }
 }
