--- a/package.json
+++ b/package.json
@@ -20,7 +20,7 @@
     "test": "echo \"Error: no test specified\" && exit 1",
     "lint": "eslint",
     "build": "tsc",
-    "prepare": "husky install",
+    "prepare": "husky",
     "commit": "cz"
   },
   "repository": {
@@ -45,7 +45,7 @@
     "eslint": "^9.12.0",
     "eslint-config-prettier": "^9.1.0",
     "globals": "^15.10.0",
-    "husky": "^8.0.0",
+    "husky": "^9.1.6",
     "lint-staged": "^15.2.10",
     "prettier": "^3.3.3",
     "typescript": "^5.6.3",
