--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     ]
   },
   "scripts": {
+    "start": "node -r ts-node/register -r tsconfig-paths/register dist/server.js",
     "test": "echo \"Error: no test specified\" && exit 1",
     "lint": "eslint",
     "build": "tsc",
@@ -48,6 +49,8 @@
     "husky": "^9.1.6",
     "lint-staged": "^15.2.10",
     "prettier": "^3.3.3",
+    "ts-node": "^10.9.2",
+    "tsconfig-paths": "^4.2.0",
     "typescript": "^5.6.3",
     "typescript-eslint": "^8.8.1"
   },
