--- a/package.json
+++ b/package.json
@@ -63,6 +63,7 @@
     "cors": "^2.8.5",
     "dotenv": "^16.4.5",
     "express": "^4.21.1",
+    "express-async-handler": "^1.2.0",
     "mysql2": "^3.11.3"
   }
 }
